--- a/resources/lang/zh.json
+++ b/resources/lang/zh.json
@@ -14,19 +14,24 @@
     "Brunei": "文萊",
     "Car Washing": "洗車",
     "Car washing": "洗車",
-    "Care of baby": "照顧嬰兒",
-    "Care of bedridden": "照顧臥床人士",
-    "Care of child": "照顧小孩(4-12)",
-    "Care of disabled": "照顧傷殘人士",
-    "Care of elderly": "照顧老人",
-    "Care of pet": "照顧寵物",
-    "Care of toddler": "照顧幼兒(1-3)",
+    "Min Height": "最低身高",
+    "Max Height": "最高身高",
+    "Min Weight": "最低體重",
+    "Max Weight": "最高體重",
+    "Care Of Baby": "照顧嬰兒",
+    "Care Of Bedridden": "照顧臥床人士",
+    "Care Of Child": "照顧小孩(4-12)",
+    "Care Of Disabled": "照顧傷殘人士",
+    "Care Of Elderly": "照顧老人",
+    "Care Of Pet": "照顧寵物",
+    "Care Of Toddler": "照顧幼兒(1-3)",
     "Catholic": "天主教",
     "Childred": "照顧小孩",
     "Chriatian": "基督教",
     "Contact Number": "聯絡電話",
     "Contact Us": "聯絡我們",
     "Cooking": "烹飪",
+    "Name": "姓名",
     "Customer Name": "客戶姓名",
     "Disable": "照顧傷殘",
     "Disabled Caring": "照顧傷殘",
@@ -49,7 +54,7 @@
     "Hong Kong": "香港",
     "Horse": "馬",
     "House Cleaning": "清潔房屋",
-    "Household work": "家務",
+    "Household Work": "家務",
     "Household": "清潔房屋",
     "Indonesia": "印度尼西亞",
     "Infant Caring": "照料初生嬰兒",
@@ -58,13 +63,13 @@
     "Join Us": "加入我們",
     "Kids Caring": "照顧小孩",
     "Kuwait": "科威特",
+    "Locations": "分店",
     "Malaysia": "馬來西亞",
-    "Marital Status": "婚姻狀況",
     "Married": "已婚",
+    "Message": "訊息",
     "Martial Status": "婚姻狀況",
     "Monkey": "猴",
     "Moslem": "穆斯林",
-    "Name": "名字",
     "Nationality": "國藉",
     "News": "最新消息",
     "No holidays": "沒有假期",
